# my-tauri-app

./: .gitignore  .mcp.json  .prettierignore  CLAUDE.md  eslint.config.js  package.json  vitest.config.ts
.claude/agents/: frontend-engineer.md  rust-tauri-backend-expert.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  settings.rs  tcp.rs
src/lib/: settings-window.test.ts  settings-window.ts  tcp-client.test.ts  tcp-client.ts  utils.ts
src/lib/components/: TcpSender.svelte
src/lib/stores/: settings.ts
src/lib/types/: tcp.ts
src/routes/: +page.svelte
src/routes/settings/: +page.svelte
tests/: setup.ts
tools/tcp-server/: .gitignore  Cargo.toml  README.md
tools/tcp-server/src/: main.rs
