[package]
name = "tcp-server"
version = "0.1.0"
edition = "2021"
description = "TCP server for testing TCP client functionality"

[[bin]]
name = "tcp-server"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"